# CourseLangChain

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_BLUEPRINT.md  Dockerfile  README.md  app.py  build.py  docker-compose.dev.yml  docker-compose.yml  main.py  mock.py  pyproject.toml  streamlit.py
.devcontainer/: devcontainer.json
agent/: graph.py  nodes.py  state.py
tools/: __init__.py  retrieval.py  text_to_sql.py
utils/: prompt.py  retriever.py
weekly-notes/: 20260331-0405.md
